--- a/designo-multi-page-website/client/src/components/Footer/Footer.module.scss
+++ b/designo-multi-page-website/client/src/components/Footer/Footer.module.scss
@@ -161,6 +161,7 @@
     & .line {
       position: relative;
       top: -190px;
+      width: 375px;
     }
 
     & .footerContentBottom {
